[package]
name = "prover_lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
ff = "0.13"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", package="halo2_proofs", rev="4d2c2f4e17a9df18e165fc088051838d9ac260f4" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", rev = "807f8f555313f726ca03bdf941f798098f488ba4" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.2"
